--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -17,27 +17,28 @@ spring:
         dialect: org.hibernate.dialect.MySQLDialect
         format_sql: false
 
-  # Configuración de Mail MEJORADA para Railway/Producción
+  # Configuración de Mail con Puerto 465 (SSL) para Railway
   mail:
     host: smtp.gmail.com
-    port: 587
+    port: 465
     username: ${MAIL_USERNAME}
     password: ${MAIL_PASSWORD}
     properties:
       mail:
         smtp:
           auth: true
-          starttls:
-            enable: true
-            required: true
           ssl:
+            enable: true
             trust: smtp.gmail.com
-            enable: false
-          connectiontimeout: 10000
-          timeout: 10000
-          writetimeout: 10000
+          socketFactory:
+            port: 465
+            class: javax.net.ssl.SSLSocketFactory
+            fallback: false
+          connectiontimeout: 15000
+          timeout: 15000
+          writetimeout: 15000
         transport:
-          protocol: smtp
+          protocol: smtps
         debug: true
 
 server:
@@ -53,5 +54,3 @@ logging:
     root: INFO
     com.veterinaria: DEBUG
     org.springframework.mail: DEBUG
-    com.sun.mail: DEBUG
-    javax.mail: DEBUG
