--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -17,40 +17,26 @@ spring:
         dialect: org.hibernate.dialect.MySQLDialect
         format_sql: false
 
-  # Configuración de Mail con Puerto 465 (SSL) para Railway
+  # Deshabilitamos mail SMTP (no funciona en Railway)
   mail:
     host: smtp.gmail.com
-    port: 465
-    username: ${MAIL_USERNAME}
-    password: ${MAIL_PASSWORD}
-    properties:
-      mail:
-        smtp:
-          auth: true
-          ssl:
-            enable: true
-            trust: smtp.gmail.com
-          socketFactory:
-            port: 465
-            class: javax.net.ssl.SSLSocketFactory
-            fallback: false
-          connectiontimeout: 15000
-          timeout: 15000
-          writetimeout: 15000
-        transport:
-          protocol: smtps
-        debug: true
+    port: 587
+    username: ${MAIL_USERNAME:}
+    password: ${MAIL_PASSWORD:}
 
 server:
   port: ${PORT:8080}
 
+# Configuración de Resend (funciona en Railway)
 app:
   mail:
-    from: ${MAIL_USERNAME}
+    from: ${MAIL_FROM:stabares_26@cue.edu.co}
     enabled: ${MAIL_ENABLED:true}
+  resend:
+    api-key: ${RESEND_API_KEY}
+    from: "VetApp <onboarding@resend.dev>"
 
 logging:
   level:
     root: INFO
     com.veterinaria: DEBUG
-    org.springframework.mail: DEBUG
